--- a/style.css
+++ b/style.css
@@ -211,11 +211,13 @@ html {
 }
 
 .primary-nav-cta-btn {
+  display: inline-block;
   font-size: 1.2rem;
   letter-spacing: 2px;
+  text-align: center;
   color: #22e52e;
   border: solid 2px #22e52e;
-  background-color: #1f1f1f;
+  background-color: transparent;
   border-radius: 50px;
   padding: 10px 20px;
 }
@@ -266,7 +268,7 @@ footer {
   font-size: 1rem;
 }
 
-.underline-link a:not(.arrow-btn a) {
+.underline-link a {
   color: #ffffff;
   text-decoration: none;
   border-bottom: solid 2px #ffffff;
@@ -288,9 +290,9 @@ footer {
 }
 
 .arrow-btn::after {
-  content: url(./images/arrow-white.svg);
+  content: url("./images/arrow-white.svg");
   position: absolute;
-  top: -3px;
+  top: 0;
   right: 0;
   width: 25px;
   height: 20px;
@@ -298,7 +300,7 @@ footer {
 }
 
 .arrow-btn:hover::after {
-  content: url(./images/arrow-green.svg);
+  content: url("./images/arrow-green.svg");
 }
 
 .arrow-btn a {
@@ -307,7 +309,8 @@ footer {
   text-transform: uppercase;
   letter-spacing: 2px;
   line-height: 1.5em;
-  padding-right: 40px;
+  border-bottom: none;
+  padding: 0 40px 0 0;
 }
 
 /* Layout */
@@ -326,12 +329,28 @@ footer {
   justify-content: space-between;
 }
 
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.display-grid {
+  display: grid;
+}
+
 .skills-list {
   flex-wrap: wrap;
 }
 
 .large-gap {
   gap: 50px;
+}
+
+.small-gap {
+  gap: 30px;
 }
 
 .max-width {
@@ -352,65 +371,10 @@ footer {
   margin: 0 auto;
 }
 
-/* Skills - Heading with CTA Button */
-
-.heading-with-cta {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  gap: 30px;
-  padding-bottom: 30px;
-}
-
-.heading-with-cta .primary-h2 {
-  padding-bottom: 0;
-}
-
-/* Statistics */
-
-.hexagon-statistic {
-  position: relative;
-}
-
-.hexagon-statistic figure {
-  position: relative;
+.small-width {
   width: 100%;
-  max-width: 1000px;
-  height: 100%;
-  max-height: 1000px;
-  text-align: center;
-  overflow: hidden;
-}
-
-.hexagon-statistic img {
-  width: 100%;
-  height: auto;
-}
-
-.statistic-number {
-  display: block;
-  width: 100%;
-  font-size: 2rem;
-  margin-bottom: 20px;
-}
-
-.hexagon-statistic .hexagon-statistic-description {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #ffffff;
-  font-size: 0.75rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  line-height: 1.5em;
-  z-index: 10;
-}
-
-.hexagon-statistic.hexagon-white .hexagon-statistic-description {
-  color: #292929;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 /* Text */
@@ -461,7 +425,19 @@ h6 {
   padding-bottom: 10px;
 }
 
+.contact .inner-container .heading-and-description .outline-heading-large {
+  width: 100%;
+  padding-bottom: 0;
+}
+
 /* Light Font */
+
+.light-font p {
+  font-size: 0.75rem;
+  font-weight: 200;
+  text-transform: uppercase;
+  line-height: 1.5em;
+}
 
 .hero-subhead .light-font {
   font-size: 0.75rem;
@@ -474,6 +450,12 @@ h6 {
 
 .white {
   color: #ffffff;
+}
+
+/* Black Text */
+
+.black {
+  color: #1f1f1f;
 }
 
 /* Vertical Text */
@@ -618,6 +600,67 @@ h6 {
   z-index: -1;
 }
 
+/* Skills - Heading with CTA Button */
+
+.heading-with-cta {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  padding-bottom: 30px;
+}
+
+.heading-with-cta .primary-h2 {
+  padding-bottom: 0;
+}
+
+/* Statistics */
+
+.hexagon-statistic {
+  position: relative;
+}
+
+.hexagon-statistic figure {
+  position: relative;
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
+  max-height: 1000px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.hexagon-statistic img {
+  width: 100%;
+  height: auto;
+}
+
+.statistic-number {
+  display: block;
+  width: 100%;
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.hexagon-statistic .hexagon-statistic-description {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #ffffff;
+  font-size: 0.75rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 1.5em;
+  z-index: 10;
+}
+
+.hexagon-statistic.hexagon-white .hexagon-statistic-description {
+  color: #292929;
+}
+
 /* Job Cards */
 
 .job-card {
@@ -723,6 +766,76 @@ h6 {
   width: calc(100% + 20px);
 }
 
+/* Quote */
+
+.quote-body .outline-text-large {
+  font-size: 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.quote-body .outline-text-large .green-accent {
+  -webkit-text-stroke-width: 0;
+}
+
+.quote-attribution {
+  color: #999999;
+}
+
+.quote-body {
+  border-top: solid 1px rgba(250, 250, 250, 0.2);
+  border-bottom: solid 1px rgba(250, 250, 250, 0.2);
+  padding: 50px 0;
+}
+
+/* Contact Form*/
+
+.heading-and-description .primary-h2 {
+  padding-bottom: 0;
+}
+
+.contact-form {
+  gap: 20px;
+}
+
+input:focus:not(input[type="file"]):not(input[type="submit"]),
+textarea:focus {
+  box-shadow: 0 0 5px rgba(250, 250, 250, 0.5);
+  outline: none;
+}
+
+input:not(input[type="file"]):not([type="submit"]),
+textarea {
+  font-size: 1.2rem;
+  background-color: transparent;
+  color: #ffffff;
+  border: solid 1px rgba(250, 250, 250, 0.2);
+  border-radius: 10px;
+  padding: 15px 15px;
+}
+
+form [type="submit"] {
+  font-size: 1rem;
+  text-transform: uppercase;
+  background-color: transparent;
+  color: #22e52e;
+  border: solid 2px #22e52e;
+  border-radius: 50px;
+  padding: 15px 15px;
+  cursor: pointer;
+}
+
+form [type="submit"]:hover {
+  background-color: #22e52e;
+  color: #262626;
+}
+
+input[type="file"] {
+  cursor: pointer;
+}
+
 /* Media Queries */
 
 @media screen and (min-width: 350px) {
@@ -766,6 +879,10 @@ h6 {
     color: #ffffff;
     line-height: 1.5em;
   }
+  /* Quote Heading */
+  .quote-body .outline-text-large {
+    font-size: 1.2rem;
+  }
 }
 
 @media screen and (min-width: 400px) {
@@ -786,12 +903,15 @@ h6 {
   .work .inner-container .select-work article {
     width: calc(100% - 50px);
   }
-  /* Select Work */
   .select-work-content .select-work-heading h3 {
     font-size: 1.5rem;
   }
   .select-work-content {
     width: calc(100% + 50px);
+  }
+  /* Quote Heading */
+  .quote-body .outline-text-large {
+    font-size: 1.4rem;
   }
 }
 
@@ -803,7 +923,7 @@ h6 {
 
 @media screen and (max-width: 500px) {
   /* Outline Heading */
-  .outline-heading-large {
+  .outline-text-large {
     -webkit-text-stroke-width: 0;
     -wekkit-text-stroke-color: transparent;
     color: #ffffff;
@@ -820,12 +940,14 @@ h6 {
     font-size: 3.5rem;
   }
   /* Outline Heading */
-  .outline-heading-large {
+  .outline-text-large {
     font-size: 3rem;
   }
+  /* Primary H2 */
   .primary-h2 {
     font-size: 2.5rem;
   }
+  /* Skills List */
   .skills-list .custom-list li,
   .large-text p {
     font-size: 1.2rem;
@@ -848,12 +970,21 @@ h6 {
   .hexagon-statistic .hexagon-statistic-description {
     font-size: 0.9rem;
   }
-  /* Select Work */
+  /* Select Work & Quote*/
   .work .inner-container .outline-heading-large {
     margin: 0 0 -70px 20px;
   }
-  .select-work-content .select-work-heading h3 {
+  .select-work-content .select-work-heading h3,
+  .quote-body .outline-text-large {
     font-size: 1.75rem;
+  }
+  .quote-attribution.light-font {
+    color: #ffffff;
+  }
+  .quote-body .outline-text-large {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #ffffff;
+    color: transparent;
   }
 }
 
@@ -882,9 +1013,24 @@ h6 {
   .hexagon-statistic .hexagon-statistic-description {
     font-size: 1rem;
   }
-  /* Featured Work */
+  /* Select Work */
   .work .inner-container .outline-heading-large {
     margin: 0 0 -80px 20px;
+  }
+  /* Quote Heading */
+  .quote-body .outline-text-large {
+    font-size: 2.25rem;
+  }
+  /* Contact Form */
+  form label,
+  form textarea,
+  form [type="url"],
+  form [type="submit"] {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  form {
+    grid-template-columns: 1fr 1fr;
   }
 }
 
@@ -937,30 +1083,25 @@ h6 {
   .fa-solid.fa-xmark {
     font-size: 40px;
   }
-
+  /* Paragraphs, Lists, and Sections */
   p,
   li {
     font-size: 1.2rem;
   }
-
   section,
   footer,
   .primary-header .header-inner .mobile-menu .mobile-menu-nav .mobile-menu-nav-items {
     padding: 80px 50px;
   }
-
   .image-separator-right {
     padding: 0 0 0 50px;
   }
-
   .image-separator-left {
     padding: 0 50px 0 0;
   }
-
   .no-bottom-padding {
     padding: 80px 50px 0 50px;
   }
-
   /* Outline Heading */
   .outline-heading-large {
     font-size: 5rem;
@@ -968,6 +1109,7 @@ h6 {
   .primary-h2 {
     font-size: 3.5rem;
   }
+  /* Skills - Heading with CTA */
   .skills .primary-h2 {
     padding-bottom: 0;
   }
@@ -977,7 +1119,6 @@ h6 {
   .job-titles .inner-container {
     gap: 50px;
   }
-  /* Skills - Heading with CTA */
   .heading-with-cta {
     align-items: flex-start;
     padding: 0;
@@ -1024,6 +1165,13 @@ h6 {
     width: calc(90% + 50px);
     margin: 0 auto;
   }
+  /* Quote Heading */
+  .quote-body .outline-text-large {
+    font-size: 3rem;
+  }
+  .quote-body {
+    padding: 80px 0;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -1053,6 +1201,7 @@ h6 {
   .primary-h2 {
     font-size: 4rem;
   }
+  /* Skills List */
   .skills-list .custom-list li,
   .large-text p {
     font-size: 1.4rem;
@@ -1079,6 +1228,10 @@ h6 {
   .select-work-content {
     width: calc(85% + 50px);
   }
+  /* Quote Heading */
+  .quote-body .outline-text-large {
+    font-size: 3.5rem;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -1086,7 +1239,6 @@ h6 {
     display: block;
     margin-left: auto;
   }
-
   .primary-header .header-inner .cta {
     margin-left: 0;
   }
@@ -1104,16 +1256,14 @@ h6 {
 
 @media screen and (min-width: 1025px) {
   /* Primary Nav */
-
   .primary-nav {
     display: flex;
     column-gap: 30px;
   }
-
   .primary-nav-cta-btn {
+    width: 9em;
     padding: 15px 30px;
   }
-
   .primary-header .header-inner .cta {
     margin-left: auto;
   }
@@ -1131,6 +1281,7 @@ h6 {
   .no-bottom-padding {
     padding: 150px 50px 0 50px;
   }
+  /* Skills List */
   .skills-list .custom-list li,
   .large-text p {
     font-size: 1.5rem;
@@ -1167,6 +1318,13 @@ h6 {
   .work .inner-container .select-work {
     gap: 100px;
   }
+  /* Quote Heading */
+  .quote-body .outline-text-large {
+    font-size: 4rem;
+  }
+  .quote-body {
+    padding: 150px 0;
+  }
 }
 
 @media screen and (min-width: 1130px) {
@@ -1181,6 +1339,7 @@ h6 {
   .outline-heading-large {
     font-size: 8rem;
   }
+  /* Skills List */
   .skills-list .custom-list li,
   .large-text p {
     font-size: 1.75rem;
@@ -1212,6 +1371,10 @@ h6 {
   .select-work-content {
     max-width: 1000px;
     margin: 0 auto;
+  }
+  /* Quote Heading */
+  .quote-body .outline-text-large {
+    font-size: 5rem;
   }
 }
 
