--- a/style.css
+++ b/style.css
@@ -938,8 +938,14 @@ input[type="file"] {
 }
 
 .footer-tagline {
-  color: #ffffff;
+  font-size: 1rem;
+  color: #999999;
   text-transform: uppercase;
+}
+
+.footer-navigation .primary-footer-nav ul li a {
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .footer-navigation ul {
@@ -952,8 +958,7 @@ input[type="file"] {
   text-transform: uppercase;
 }
 
-.social-icons .footer-social-icon a,
-.footer-navigation .primary-footer-nav ul li a {
+.social-icons .footer-social-icon a {
   color: #999999;
   text-decoration: none;
 }
@@ -962,13 +967,31 @@ input[type="file"] {
   color: #22e52e;
 }
 
+.social-icons .footer-social-icon a:hover {
+  background-color: #22e52e;
+  border-color: #22e52e;
+}
+
+.social-icons .footer-social-icon a:hover i {
+  color: #262626;
+}
+
+.social-icons {
+  gap: 15px;
+}
+
 .footer-social-icon {
   position: relative;
+  width: 50px;
+  height: 50px;
+}  
+
+.footer-social-icon a {
+  display: inline-block;
   border: solid 1px rgba(250, 250, 250, 0.2);
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  padding: 20px;
 }
 
 .social-icons .footer-social-icon i {
@@ -976,7 +999,7 @@ input[type="file"] {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 .bottom-half {
@@ -990,6 +1013,10 @@ input[type="file"] {
   font-weight: 100;
   line-height: 1.75;
   margin: -5px 0;
+}
+
+.pipe {
+  padding: 0 5px;
 }
 
 /* Media Queries */
